add action rounding, action space property and space bounds

--- a/orderparams.ipynb
+++ b/orderparams.ipynb
@@ -41,9 +41,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 123
+          "height": 122
         },
-        "outputId": "70f2c57f-4e7c-4d6b-d315-8a1e19a4830f"
+        "outputId": "43eec23a-8dfc-4460-847f-901a667d0c79"
       },
       "source": [
         "from google.colab import drive\n",
@@ -73,7 +73,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "0907dcaa-501c-4267-be1f-6d215f036737"
+        "outputId": "6616af72-8cdd-4e5c-a61e-35c30f1470f5"
       },
       "source": [
         "cd /content/drive/My Drive/orderml"
@@ -83,7 +83,7 @@
         {
           "output_type": "stream",
           "text": [
-            "/content/drive/.shortcut-targets-by-id/1FKl2J9VPA88stIpA_grTLED-Fv9_B7CF/orderml\n"
+            "/content/drive/My Drive/orderml\n"
           ],
           "name": "stdout"
         }
@@ -118,7 +118,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "6ce5beea-586f-4f0b-9066-9b99818334cc"
+        "outputId": "5e569d7c-5181-48db-b5c5-82036a97267f"
       },
       "source": [
         "ls"
@@ -151,9 +151,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 311
+          "height": 306
         },
-        "outputId": "37401cd4-7ce2-4fb6-80bf-2170d59c42ac"
+        "outputId": "5959d2f0-b04c-4759-e904-58874be85452"
       },
       "source": [
         "!pip install bumps\n",
@@ -166,18 +166,18 @@
           "text": [
             "Collecting bumps\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/08/ec/a0f67cabd2c1b354382030c88b50b123b68c0bb8784726cae9171d6dead9/bumps-0.7.16.tar.gz (515kB)\n",
-            "\r\u001b[K     |▋                               | 10kB 24.1MB/s eta 0:00:01\r\u001b[K     |█▎                              | 20kB 6.5MB/s eta 0:00:01\r\u001b[K     |██                              | 30kB 7.7MB/s eta 0:00:01\r\u001b[K     |██▌                             | 40kB 8.5MB/s eta 0:00:01\r\u001b[K     |███▏                            | 51kB 6.9MB/s eta 0:00:01\r\u001b[K     |███▉                            | 61kB 7.5MB/s eta 0:00:01\r\u001b[K     |████▌                           | 71kB 8.5MB/s eta 0:00:01\r\u001b[K     |█████                           | 81kB 8.7MB/s eta 0:00:01\r\u001b[K     |█████▊                          | 92kB 8.2MB/s eta 0:00:01\r\u001b[K     |██████▍                         | 102kB 8.5MB/s eta 0:00:01\r\u001b[K     |███████                         | 112kB 8.5MB/s eta 0:00:01\r\u001b[K     |███████▋                        | 122kB 8.5MB/s eta 0:00:01\r\u001b[K     |████████▎                       | 133kB 8.5MB/s eta 0:00:01\r\u001b[K     |█████████                       | 143kB 8.5MB/s eta 0:00:01\r\u001b[K     |█████████▌                      | 153kB 8.5MB/s eta 0:00:01\r\u001b[K     |██████████▏                     | 163kB 8.5MB/s eta 0:00:01\r\u001b[K     |██████████▉                     | 174kB 8.5MB/s eta 0:00:01\r\u001b[K     |███████████▍                    | 184kB 8.5MB/s eta 0:00:01\r\u001b[K     |████████████                    | 194kB 8.5MB/s eta 0:00:01\r\u001b[K     |████████████▊                   | 204kB 8.5MB/s eta 0:00:01\r\u001b[K     |█████████████▍                  | 215kB 8.5MB/s eta 0:00:01\r\u001b[K     |██████████████                  | 225kB 8.5MB/s eta 0:00:01\r\u001b[K     |██████████████▋                 | 235kB 8.5MB/s eta 0:00:01\r\u001b[K     |███████████████▎                | 245kB 8.5MB/s eta 0:00:01\r\u001b[K     |███████████████▉                | 256kB 8.5MB/s eta 0:00:01\r\u001b[K     |████████████████▌               | 266kB 8.5MB/s eta 0:00:01\r\u001b[K     |█████████████████▏              | 276kB 8.5MB/s eta 0:00:01\r\u001b[K     |█████████████████▉              | 286kB 8.5MB/s eta 0:00:01\r\u001b[K     |██████████████████▍             | 296kB 8.5MB/s eta 0:00:01\r\u001b[K     |███████████████████             | 307kB 8.5MB/s eta 0:00:01\r\u001b[K     |███████████████████▊            | 317kB 8.5MB/s eta 0:00:01\r\u001b[K     |████████████████████▎           | 327kB 8.5MB/s eta 0:00:01\r\u001b[K     |█████████████████████           | 337kB 8.5MB/s eta 0:00:01\r\u001b[K     |█████████████████████▋          | 348kB 8.5MB/s eta 0:00:01\r\u001b[K     |██████████████████████▎         | 358kB 8.5MB/s eta 0:00:01\r\u001b[K     |██████████████████████▉         | 368kB 8.5MB/s eta 0:00:01\r\u001b[K     |███████████████████████▌        | 378kB 8.5MB/s eta 0:00:01\r\u001b[K     |████████████████████████▏       | 389kB 8.5MB/s eta 0:00:01\r\u001b[K     |████████████████████████▊       | 399kB 8.5MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▍      | 409kB 8.5MB/s eta 0:00:01\r\u001b[K     |██████████████████████████      | 419kB 8.5MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▊     | 430kB 8.5MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▎    | 440kB 8.5MB/s eta 0:00:01\r\u001b[K     |████████████████████████████    | 450kB 8.5MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▋   | 460kB 8.5MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▏  | 471kB 8.5MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▉  | 481kB 8.5MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▌ | 491kB 8.5MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▏| 501kB 8.5MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▊| 512kB 8.5MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 522kB 8.5MB/s \n",
+            "\u001b[K     |████████████████████████████████| 522kB 2.8MB/s \n",
             "\u001b[?25hRequirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from bumps) (1.12.0)\n",
             "Building wheels for collected packages: bumps\n",
             "  Building wheel for bumps (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for bumps: filename=bumps-0.7.16-cp36-none-any.whl size=546174 sha256=b15e878083fd43409f48193b6bc009e9808b6f37e5ad3538c5b76c8cf27e8382\n",
+            "  Created wheel for bumps: filename=bumps-0.7.16-cp36-none-any.whl size=546174 sha256=0c028fdb2cfe52b3db2beb6fad487ddeae7bc7a3f9448ff78d6555f7d6064a0b\n",
             "  Stored in directory: /root/.cache/pip/wheels/41/f7/17/a898c85754ad1c6d7de087e28809af7989b81f14f200547de3\n",
             "Successfully built bumps\n",
             "Installing collected packages: bumps\n",
             "Successfully installed bumps-0.7.16\n",
             "Requirement already satisfied: gym in /usr/local/lib/python3.6/dist-packages (0.17.2)\n",
-            "Requirement already satisfied: numpy>=1.10.4 in /usr/local/lib/python3.6/dist-packages (from gym) (1.18.5)\n",
             "Requirement already satisfied: scipy in /usr/local/lib/python3.6/dist-packages (from gym) (1.4.1)\n",
+            "Requirement already satisfied: numpy>=1.10.4 in /usr/local/lib/python3.6/dist-packages (from gym) (1.18.5)\n",
             "Requirement already satisfied: cloudpickle<1.4.0,>=1.2.0 in /usr/local/lib/python3.6/dist-packages (from gym) (1.3.0)\n",
             "Requirement already satisfied: pyglet<=1.5.0,>=1.4.0 in /usr/local/lib/python3.6/dist-packages (from gym) (1.5.0)\n",
             "Requirement already satisfied: future in /usr/local/lib/python3.6/dist-packages (from pyglet<=1.5.0,>=1.4.0->gym) (0.16.0)\n"
@@ -346,6 +346,8 @@
         "colab": {}
       },
       "source": [
+        "import gym.spaces as spaces\n",
+        "\n",
         "class OrderEnv(): #add gym.env\n",
         "\n",
         "    def __init__(self):\n",
@@ -353,11 +355,13 @@
         "        self.episodeNum = 0\n",
         "        self.steps = 0\n",
         "        self.prevChisq = None\n",
+        "        startTn = 160\n",
         "        self.M = Curve(orderparameter, T, I, error, Jt = p[1], Nf = p[2], Bk = p[3])\n",
-        "        self.M.Tn.range(5,400)\n",
+        "        self.M.Tn.range(startTn - 20 , startTn + 20)\n",
         "\n",
-        "        #self.observation_space = Box()\n",
-        "        #self.action_space = Box(5, 400)\n",
+        "        self.observation_space = spaces.Box(3, 340)\n",
+        "        #self.action_space = spaces.Box(0, 337)\n",
+        "        curTemp = 3\n",
         "\n",
         "        #logging arrays and vars\n",
         "        self.rewards = [] #interepisodic\n",
@@ -365,7 +369,10 @@
         "        self.transTemps = []\n",
         "        self.totReward = 0      \n",
         "\n",
-        "    def step(self): #actions is actions previosuly taken - used for masking\n",
+        "    def step(self, action): \n",
+        "\n",
+        "        curTemp += action\n",
+        "        curTemp = round_to(curTemp, 0.5)\n",
         "\n",
         "        self.steps += 1\n",
         "        reward = -self.reward_scale\n",
@@ -396,7 +403,7 @@
         "        else:\n",
         "            terminal = False\n",
         "\n",
-        "        return self.state, reward, terminal\n",
+        "        return self.state, reward, terminal #missing state\n",
         "\n",
         "\n",
         "    def reset(self):\n",
@@ -426,9 +433,17 @@
         "\n",
         "        self.rewards.append(self.totReward)\n",
         "        filename = \"logs/runrewards.txt\"\n",
-        "        np.savetxt(filename, self.rewards)"
+        "        np.savetxt(filename, self.rewards)\n",
+        "\n",
+        "    @property\n",
+        "    def action_space(self):\n",
+        "        return spaces.Box(0, 340 - curTemp)\n",
+        "\n",
+        "    def round_to(n, precision):\n",
+        "        correction = 0.5 if n >= 0 else -0.5\n",
+        "        return int( n/precision+correction ) * precision"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -436,15 +451,34 @@
       "metadata": {
         "id": "EuhpoHfGZ-24",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "196946d3-e2f5-412b-9faf-c4a62c0b46e0"
       },
       "source": [
-        "chisqds = [1,2]\n",
-        "filename = \"logs/chis/chiLog-.txt\"\n",
-        "np.savetxt(filename, chisqds)"
+        "def round_to(n, precision):\n",
+        "    correction = 0.5 if n >= 0 else -0.5\n",
+        "    return int( n/precision+correction ) * precision\n",
+        "\n",
+        "round_to(1.75, 0.5)"
       ],
-      "execution_count": 41,
-      "outputs": []
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
     }
   ]
 }
