added model fitting to step

--- a/orderparams.ipynb
+++ b/orderparams.ipynb
@@ -354,14 +354,16 @@
         "        self.reward_scale = 100\n",
         "        self.episodeNum = 0\n",
         "        self.steps = 0\n",
-        "        self.prevChisq = None\n",
-        "        startTn = 160\n",
-        "        self.M = Curve(orderparameter, T, I, error, Jt = p[1], Nf = p[2], Bk = p[3])\n",
-        "        self.M.Tn.range(startTn - 20 , startTn + 20)\n",
+        "        self.T = []\n",
+        "        self.startTn = 160\n",
+        "        self.p = [.885,330,.3]\n",
+        "        # self.M = Curve(orderparameter, T, I, error, Jt = self.p[0], Nf = self.p[1], Bk = self.p[2])\n",
+        "        # self.M.Tn.range(self.startTn - 20 , self.startTn + 20)\n",
         "\n",
         "        self.observation_space = spaces.Box(3, 340)\n",
         "        #self.action_space = spaces.Box(0, 337)\n",
-        "        curTemp = 3\n",
+        "        self.curTemp = 3\n",
+        "        self.x = self.startTn\n",
         "\n",
         "        #logging arrays and vars\n",
         "        self.rewards = [] #interepisodic\n",
@@ -371,30 +373,34 @@
         "\n",
         "    def step(self, action): \n",
         "\n",
-        "        curTemp += action\n",
-        "        curTemp = round_to(curTemp, 0.5)\n",
+        "        self.curTemp += action\n",
+        "        self.curTemp = round_to(self.curTemp, 0.5)\n",
         "\n",
         "        self.steps += 1\n",
         "        reward = -self.reward_scale\n",
         "\n",
         "        if self.steps > 1:\n",
-        "            x, dx, chisq, params = fit(self.M)\n",
+        "            self.T.append(self.curTemp)\n",
+        "            self.I = getData(self.T, self.x)\n",
+        "            self.M = Curve(orderparameter, T, self.I, error, Jt = self.p[0], Nf = self.p[1], Bk = self.p[2])\n",
+        "            self.M.Tn.range(self.x - 20 , self.x + 20)\n",
+        "\n",
+        "            self.x, dx, chisq, params = fit(self.M)\n",
         "\n",
         "            dx = params[0].dx\n",
         "\n",
-        "            if chisq <10:\n",
+        "            if chisq < 10:\n",
         "                reward += 1000\n",
         "\n",
         "                if dz < 2e-3:\n",
         "                    reward+=1/dz\n",
         "\n",
-        "            self.prevChisq = chisq\n",
         "            self.chisqds.append(chisq)\n",
-        "            self.transTemps.append(x)\n",
+        "            self.transTemps.append(self.x)\n",
         "\n",
         "        self.totReward += reward\n",
         "\n",
-        "        if (self.prevChisq != None and self.steps > 10 and chisq < 0.05):\n",
+        "        if (self.steps > 10 and chisq < 0.05):\n",
         "            terminal = True\n",
         "            self.log()\n",
         "        if (self.steps > 30):\n",
@@ -408,7 +414,6 @@
         "\n",
         "    def reset(self):\n",
         "        self.steps = 0\n",
-        "        self.prevChisq = None\n",
         "        self.chisqds = []\n",
         "        self.transTemps = []\n",
         "        self.totReward = 0\n",
@@ -437,11 +442,14 @@
         "\n",
         "    @property\n",
         "    def action_space(self):\n",
-        "        return spaces.Box(0, 340 - curTemp)\n",
+        "        return spaces.Box(0, 340 - self.curTemp)\n",
         "\n",
         "    def round_to(n, precision):\n",
         "        correction = 0.5 if n >= 0 else -0.5\n",
-        "        return int( n/precision+correction ) * precision"
+        "        return int( n/precision+correction ) * precision\n",
+        "\n",
+        "    def getData(self, T, x, Jt = self.p[0], Nf = self.p[1], Bk = self.p[2]):\n",
+        "        return orderparameter(T, x, Jt, Nf, Bk)"
       ],
       "execution_count": null,
       "outputs": []
